# cliffordlayers

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  generate_research.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  research.yml  setup.py  sitemap.xml
.github/workflows/: CI.yml
cliffordlayers/: __init__.py  basisbladeorder.py  cliffordalgebra.py  cliffordkernels.py  signature.py  version.py
cliffordlayers/models/: custom_kernels.py  custom_layers.py  gca_models_2d.py  gcan_layers.py  models_2d.py  models_3d.py  utils.py
cliffordlayers/models/basic/: custom_layers.py  threed.py  twod.py
cliffordlayers/nn/: __init__.py
cliffordlayers/nn/functional/: batchnorm.py  cliffordg3conv.py  groupnorm.py  utils.py
css/: extra.css
docker/: Dockerfile  environment.yml
docs/: index.md  install.md  research.md
docs/css/: extra.css
docs/reference/: functional.md  misc.md  models.md  modules.md
install/: index.html
overrides/: home.html
reference/functional/: index.html
reference/misc/: index.html
reference/models/: index.html
reference/modules/: index.html
research/: index.html
search/: search_index.json
tests/: test_CliffordFluidNet2d.py  test_CliffordMaxwellNet3d.py  test_CliffordNet2d.py  test_CliffordNet3d.py  test_GCAFluidNet2d.py  test_algebra.py  test_clifford_batchnorm.py  test_clifford_convolution.py  test_clifford_convolution_custom.py  test_clifford_fourier.py  test_clifford_groupnorm.py  test_clifford_kernels.py  test_clifford_linear.py  test_clifford_rotation_kernel.py  test_gcan_layers.py
(+8 files in other folders)
